--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-/diag_Entité_Relations/*.vpp.bak*
-/diag_class/*.vpp.bak*
-/diag_activity/*.vpp.bak*
+/diag_Entité_Relations/**/*.vpp.bak*
+/diag_class/**/*.vpp.bak*
+/diag_activity/**/*.vpp.bak*
